# rr-dna

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/dna-worker/: .env.example  .gitignore  Dockerfile  package.json  pyproject.toml
apps/dna-worker/scripts/: backfill_pgs.py  backfill_pharma.py  backfill_traits.py  build_ancestry_db.py  build_clinvar_db.py
apps/dna-worker/src/: config.py  main.py
apps/dna-worker/src/api/: app.py  routes.py
apps/dna-worker/src/api/services/: clinvar.py  gnomad.py  pharmgkb.py  snpedia.py
apps/dna-worker/src/data/: clinvar_loader.py  ensure_databases.py  reference_db.py
apps/dna-worker/src/data/genome/: pgs_reference.json
apps/dna-worker/src/data/gnomad/: download_gnomad.sh
apps/dna-worker/src/data/neanderthal/: build_panel.py
apps/dna-worker/src/db/: connection.py  queries.py
apps/dna-worker/src/worker/: acmg_panel.py  annotator.py  call_confidence.py  carrier_panel.py  consumer.py  genome_fasta.py  gnomad_af.py  haplogroups.py  jobs.py  neanderthal_panel.py  pgs_catalog.py  pgs_panel.py  pgs_reference.py  pharmacogenes.py  trait_panel.py  vcf_parser.py
apps/dna-worker/tests/: test_acmg_panel.py  test_api.py  test_build_clinvar_db.py  test_call_confidence.py  test_carrier_panel.py  test_clinvar_lookup.py  test_gnomad_af.py  test_haplogroups.py  test_pharmacogenes.py  test_trait_panel.py  test_vcf_parser.py
apps/dna-worker/tools/: setup.sh
apps/server/: .env.example  package.json  tsconfig.json  vitest.config.ts
apps/web/: eslint.config.js  index.html  package.json  (+2 more)
(+115 files in other folders)
