[project]
name = "rr-dna-worker"
version = "0.1.0"
description = "DNA VCF analysis worker"
requires-python = ">=3.12"
dependencies = [
    "cyvcf2>=0.31",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "bullmq>=2.9",
    "redis>=5.2",
    "httpx>=0.28",
    "pyfaidx>=0.9.0.4",
    "gdown>=6.1.0",
    "pyliftover>=0.4.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
